--- a/index.html
+++ b/index.html
@@ -9,13 +9,28 @@
 </head>
 <body>
 
-<div id="vis"></div>
+<h1>Multiple Visualisations</h1>
+
+<h2>Covid-19 cases visualization</h2>
+<div id="buble_chart"></div>
+
+<h2>Average calories of cereal based on famous brands</h2>
+<div id="bar_chart"></div>
 
 <script type="text/javascript">
-  var spec = "https://raw.githubusercontent.com/Quang810/FIT3179/main/tooltip_chart.vl.json";
-  vegaEmbed('#vis', spec).then(function(result) {
+  
+  var vis1 = "https://raw.githubusercontent.com/Quang810/FIT3179/main/tooltip_chart.vl.json";
+  
+  vegaEmbed('#buble_chart', vis1).then(function(result) {
+    // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
+  }).catch(console.error);
+  
+  var vis2 = "https://raw.githubusercontent.com/Quang810/FIT3179/main/Cereal.vl.json";
+  
+  vegaEmbed('#bar_chart', vis2).then(function(result) {
     // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
   }).catch(console.error);
 </script>
+
 </body>
 </html>
