--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <h1>Multiple Visualisations</h1>
 
 <h2>World Obesity Rate</h2>
-<div id="geographic2"></div>
+<div id="geographic"></div>
 
 <h2>Fastfood locations in the US</h2>
 <div id="geographic2"></div>
