--- a/index.html
+++ b/index.html
@@ -13,18 +13,9 @@
 
 <h2>World Obesity Rate</h2>
 <div id="geographic"></div>
-
-<h2>Fastfood locations in the US</h2>
-<div id="geographic2"></div>
   
-<h2>Fast food calories based on category</h2>
-<div id="piechart"></div>
-  
-<h2>Obesity based on genders</h2>
+<h2>Cereal brands</h2>
 <div id="barchart"></div>
-  
-<h2>Leading causes of death</h2>
-<div id="text"></div>
 
 <script type="text/javascript">
   
@@ -34,29 +25,13 @@
     // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
   }).catch(console.error);
   
-  var vis2 = "https://raw.githubusercontent.com/Quang810/FIT3179/main/US_Fastfood_restaurants.vl.json";
+  var vis2 = "https://raw.githubusercontent.com/Quang810/FIT3179/main/Cereal.vl.json";
   
-  vegaEmbed('#geographic2', vis2).then(function(result) {
+  vegaEmbed('#barchart', vis2).then(function(result) {
     // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
   }).catch(console.error);
   
-  var vis3 = "https://raw.githubusercontent.com/Quang810/FIT3179/main/Fastfood_calories.vl.json";
-  
-  vegaEmbed('#piechart', vis3).then(function(result) {
-    // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
-  }).catch(console.error);
-  
-   var vis4 = "https://raw.githubusercontent.com/Quang810/FIT3179/main/obesity_gender.vl.json";
-  
-  vegaEmbed('#barchart', vis4).then(function(result) {
-    // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
-  }).catch(console.error);
-  
-   var vis5 = "https://raw.githubusercontent.com/Quang810/FIT3179/main/Causes%20of%20death%202017.vl.json";
-  
-  vegaEmbed('#text', vis5).then(function(result) {
-    // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
-  }).catch(console.error);
+
 </script>
 
 </body>
