--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </div>
     </div>
 
-div class="pure-g">
+<div class="pure-g">
         <div class="pure-u-2-3">
           <div id="vis2"  class="vis-container"></div>
         </div>
@@ -58,7 +58,7 @@ div class="pure-g">
         </div>
     </div>
 
-div class="pure-g">
+<div class="pure-g">
         <div class="pure-u-2-3">
           <div id="vis4"  class="vis-container"></div>
         </div>
