--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       font-weight: 900;
     }
      body{
-       background-color: blue;
+       background-color: white;
      }
      .page{
        width: 850px;    
@@ -53,17 +53,10 @@
   <div class="page">
 
    <!-- pure grid group -->
-    <div class="pure-g">
-      <div class="pure-u-2-5">
-          
-        </div>
-      <div class="pure-u-1-5">
-        <h1>Obesity trend in the US</h1>
-        <p>This page demonstrates the obesity rate in America, contributing factors to the obesity rate such as fast food, and consequences of overweight</p>
+      <div class="pure-u-1-1">
+        <h1 style="text-align:center;">Obesity trend in the US</h1>
+        <p style="text-align:center;">This page demonstrates the obesity rate in America, contributing factors to the obesity rate such as fast food, and consequences of overweight</p>
       </div>
-      <div class="pure-u-2-5">
-          
-       </div>
     </div>
 
     <div class="pure-g">
@@ -85,8 +78,7 @@
         <div class="pure-u-2-5">
           <div class="description description-right">
             <h2>Fastfood restaurant locations in the US</h2>
-            <p>The US has over 50.000 fast food chains (Njaramba, 2020). The fast food giant Mc'Donald alone has over 13.000 locations in the US. The Center for Disease Control 
-              and Prevention considers obesity is a major health issue resulting in numerous diseases in the US.</p>
+            <p>The US has over 50.000 fast food chains (Njaramba, 2020). The fast food giant Mc'Donald alone has over 13.000 locations in the US. The Center for Disease Control and Prevention considers obesity is a major health issue resulting in numerous diseases in the US.</p>
           </div>
         </div>
   
