--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
     *{
       font-family: 'Source Sans Pro', sans-serif;
     }
+    p{
+      font-style: normal;
+    }
     h1{
       font-weight: 900;
     }
@@ -30,7 +33,7 @@
     }
     .vis-container{
       width: 100%;
-      padding-left: 100px;
+      padding-left: 80px;
     }
     .description h2, h1{
       margin-top:0px;
