--- a/index.html
+++ b/index.html
@@ -66,11 +66,16 @@
   <!-- end pure grid group -->
 
     <!-- pure grid group -->
+   <div class="pure-g">
+      <div class="pure-u-1-1">
+        <h2 style="text-align:center;">World Obesity Rate</h2>
+      </div>
+    </div>
+   
     <div class="pure-g">
         <div class="pure-u-1-2">
           <div class="description description-left">
-            <h2>World Obesity Rate</h2>
-            <p>Obesity is one of the biggest problems to many countries in the world. The United States of America has been consistently one of top countries that have highest obesity rate over population </p>
+            <p style="text-align:center;font-style: normal;">Obesity is one of the biggest problems to many countries in the world. The United States of America has been consistently one of top countries that have highest obesity rate over population </p>
             <br><p style="text-align:center;"><b>650 mil adults are obese (WHO, 2020)</p>
           </div>
         </div>
@@ -81,14 +86,19 @@
     <!-- end pure grid group -->
 
     <!-- pure grid group -->
+   <div class="pure-g">
+      <div class="pure-u-1-1">
+        <h2 style="text-align:center;">Fastfood restaurant locations in the US</h2>
+      </div>
+    </div>
+
     <div class="pure-g">
         <div class="pure-u-1-2">
           <div id="vis2"  class="vis-container"></div>
         </div>
         <div class="pure-u-1-2">
           <div class="description description-right">
-           <h2>Fastfood restaurant locations in the US</h2>
-            <p>The US has over 50.000 fast food chains (Njaramba, 2020). The Center for Disease Control and Prevention considers obesity is a major health issue resulting in numerous diseases in the US.</p>
+            <p style="text-align:center;font-style: normal;">The US has over 50.000 fast food chains (Njaramba, 2020). The Center for Disease Control and Prevention considers obesity is a major health issue resulting in numerous diseases in the US.</p>
             <br><p style="text-align:center;"><b>Over 13.000 MacDonald in US</p>
           </div>
         </div>
@@ -97,11 +107,17 @@
     <!-- end pure grid group -->
 
     <!-- pure grid group -->
+   <div class="pure-g">
+      <div class="pure-u-1-1">
+        <h2 style="text-align:center;">Average calories of popular fastfood categories</h2>
+      </div>
+    </div>
+   
     <div class="pure-g">
       <div class="pure-u-1-2">
         <div class="description description-left">
-            <h2>Average calories of popular fastfood categories</h2>
-            <p>An average adult should consume around 2000 – 2500 calories per day. However, if the body consumes too many calories without burning excess energy, the body will store the extra calories as fat. Fast foods are the rich sources of calories and fat.</p>
+          
+            <p style="text-align:center;font-style: normal;">An average adult should consume around 2000 – 2500 calories per day. However, if the body consumes too many calories without burning excess energy, the body will store the extra calories as fat. Fast foods are the rich sources of calories and fat.</p>
             <br><p style="text-align:center;"><b>1.100 calories of a BigMac meal</p>
 
         </div>
@@ -113,14 +129,19 @@
     
     </div>
      <!-- pure grid group -->
+      <div class="pure-g">
+      <div class="pure-u-1-1">
+        <h2 style="text-align:center;">Obesity rate in the US based on genders</h2>
+      </div>
+    </div>
+   
     <div class="pure-g">
         <div class="pure-u-1-2">
           <div id="vis4"  class="vis-container"></div>
         </div>
         <div class="pure-u-1-2">
           <div class="description description-right">
-            <h2>Obesity rate in the US based on genders</h2>
-            <p>According to the Centers for Disease Control and Prevention (2020), the obesity rate in the US has reached highest record in 2017 – 2018. The Centers for Disease Control and Prevention announced that all 50 states in America has over 20% obesity rate (2020)</p>
+            <p style="text-align:center;font-style: normal;">According to the Centers for Disease Control and Prevention (2020), the obesity rate in the US has reached highest record in 2017 – 2018. The Centers for Disease Control and Prevention announced that all 50 states in America has over 20% obesity rate (2020)</p>
             <br><p style="text-align:center;"><b>42.4% obesity rate(2017)</p>
           </div>
         </div>
@@ -129,10 +150,16 @@
     <!-- end pure grid group --> 
     <!-- pure grid group -->
     <div class="pure-g">
+      <div class="pure-u-1-1">
+        <h2 style="text-align:center;">Death leading causes in the US</h2>
+      </div>
+    </div>
+   
+    <div class="pure-g">
       <div class="pure-u-1-2">
         <div class="description description-left">
-           <h2>Death leading causes in the US</h2>
-            <p>According to Centers for Disease Control and Prevention - CDC (2020): “People who have obesity, compared to those with a healthy weight, are at increased risk for many serious diseases and health conditions” (2020). Obese people have a higher risk of having Coronary heart disease, type 2 diabetes, stroke. According to the data from the CDC, heart diseases and diabetes have been the leading factors of death in the US consistently. </p>
+
+            <p style="text-align:center;font-style: normal;">According to Centers for Disease Control and Prevention - CDC (2020): “People who have obesity, compared to those with a healthy weight, are at increased risk for many serious diseases and health conditions” (2020). Obese people have a higher risk of having Coronary heart disease, type 2 diabetes, stroke. According to the data from the CDC, heart diseases and diabetes have been the leading factors of death in the US consistently. </p>
             <br><p style="text-align:center;"><b>647.457 deaths by heart diseases in 2017</p>
         </div>
       </div>
