--- a/index.html
+++ b/index.html
@@ -73,35 +73,36 @@
     </div>
    
     <div class="pure-g">
-        <div class="pure-u-1-4">
+        <div class="pure-u-1-3">
           <div class="description description-left">
             <p style="text-align:center;font-style: normal;">Obesity is one of the biggest problems to many countries in the world. The United States of America has been consistently one of top countries that have highest obesity rate over population </p>
             <br><p style="text-align:center;"><b>650 mil adults are obese (WHO, 2020)</p>
           </div>
         </div>
-        <div class="pure-u-3-4">
+        <div class="pure-u-1-3">
           <div id="vis1" class="vis-container"></div>
+        </div>
+      <div class="pure-u-1-3">
+          <div id="vis2"  class="vis-container"></div>
         </div>
     </div>
     <!-- end pure grid group -->
 
     <!-- pure grid group -->
-   <div class="pure-g">
+<!--    <div class="pure-g">
       <div class="pure-u-1-1">
         <h2 style="text-align:center;">Fastfood restaurant locations in the US</h2>
       </div>
     </div>
 
     <div class="pure-g">
-        <div class="pure-u-3-4">
-          <div id="vis2"  class="vis-container"></div>
-        </div>
+        
         <div class="pure-u-1-4">
           <div class="description description-right">
             <p style="text-align:center;font-style: normal;">The US has over 50.000 fast food chains (Njaramba, 2020). The Center for Disease Control and Prevention considers obesity is a major health issue resulting in numerous diseases in the US.</p>
             <br><p style="text-align:center;"><b>Over 13.000 MacDonald in US</p>
           </div>
-        </div>
+        </div> -->
       
     </div>
     <!-- end pure grid group -->
