--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
           </div>
         </div> -->
       
-    </div>
+<!--     </div> -->
     <!-- end pure grid group -->
 
     <!-- pure grid group -->
