--- a/index.html
+++ b/index.html
@@ -101,9 +101,9 @@
             <p style="text-align:center;font-style: normal;">The US has over 50.000 fast food chains (Njaramba, 2020). The Center for Disease Control and Prevention considers obesity is a major health issue resulting in numerous diseases in the US.</p>
             <br><p style="text-align:center;"><b>Over 13.000 MacDonald in US</p>
           </div>
-        </div> -->
+        </div> 
       
-   </div> -->
+   </div>
     <!-- end pure grid group -->
 
     <!-- pure grid group -->
