--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
       font-weight: 900;
     }
      body{
-       background-color: lightgray;
+       background-color: lightblue;
      }
      .page{
-       width: 1000px;    
+       width: 900px;    
        background-color: white;   
        margin: auto;
        padding: 20px;
