--- a/index.html
+++ b/index.html
@@ -18,15 +18,16 @@
     p{
       font-style: normal;
     }
-    h1{
+    h1, h2{
       font-weight: 900;
+      color: orange;
     }
      body{
-       background-color: lightblue;
+       background-color: white;
      }
      .page{
-       width: 900px;    
-       background-color: white;   
+       width: 950px;    
+       background-color: yellow;   
        margin: auto;
        padding: 20px;
        padding-top: 35px;
