--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
       color: orange;
     }
      body{
-       background-color: white;
+       background-color: #ffffa1;
      }
      .page{
-       width: 950px;    
-       background-color: yellow;   
+       width: 1000px;    
+       background-color: white;   
        margin: auto;
        padding: 20px;
        padding-top: 35px;
