--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     }
     .vis-container{
       width: 100%;
-      padding-left: 80px;
+      padding-left: 50px;
     }
     .description h2, h1{
       margin-top:0px;
@@ -44,6 +44,8 @@
     }
     .description-left{
       padding-right: 10px;
+      padding-left: 50px;
+  
     }
     .pure-g{
       margin-bottom: 25px;
@@ -61,7 +63,7 @@
     <div class="pure-g">
       <div class="pure-u-1-1">
         <h1 style="text-align:center;">Obesity trend in the US</h1>
-        <p style="text-align:center;">This page demonstrates the obesity rate in America, contributing factors to the obesity rate such as fast food, and consequences of overweight</p>
+        <p style="text-align:center;">This page demonstrates the obesity rate in America, contributing factors to the obesity rate such as fast food, and consequences of being overweight</p>
       </div>
     </div>
   <!-- end pure grid group -->
