--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
       margin-top:0px;
     }
     .description-right {
-      padding-left: 50px;
+      padding-right: 50px;
+      padding-left: 10px;
     }
     .description-left{
       padding-right: 10px;
