--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
    <!-- pure grid group -->
     <div class="pure-g">
       <div class="pure-u-1-1">
-        <h1 style="text-align:center;">Obesity trend in the US</h1>
-        <p style="text-align:center;">This page demonstrates the obesity rate in America, contributing factors to the obesity rate such as fast food, and consequences of being overweight</p>
+        <h1 style="text-align:center;">Obesity in the United States of America</h1>
+        <p style="text-align:center;">This page demonstrates the obesity rate in America, contributing factors to the obesity rate, and consequences of being overweight</p>
       </div>
     </div>
   <!-- end pure grid group -->
@@ -163,7 +163,7 @@
       <div class="pure-u-1-4">
         <div class="description description-left">
 
-            <p style="text-align:center;font-style: normal;">According to Centers for Disease Control and Prevention - CDC (2020): “People who have obesity, compared to those with a healthy weight, are at increased risk for many serious diseases and health conditions” (2020). Obese people have a higher risk of having Coronary heart disease, type 2 diabetes, stroke. According to the data from the CDC, heart diseases and diabetes have been the leading factors of death in the US consistently. </p>
+            <p style="text-align:center;font-style: normal;">Obese people have a higher risk of having Coronary heart disease, type 2 diabetes, stroke. According to the data from the CDC, heart diseases and diabetes have been the leading factors of death in the US consistently. </p>
             <br><p style="text-align:center;"><b>647.457 deaths by heart diseases in 2017</p>
         </div>
       </div>
