--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
    <!-- pure grid group -->
     <div class="pure-g">
       <div class="pure-u-1-1">
-        <h1 style="text-align:center;">Obesity in the United States of America</h1>
+        <h1 style="text-align:center;">Obesity In The USA</h1>
         <p style="text-align:center;">This page demonstrates the obesity rate in America, contributing factors to the obesity rate, and consequences of being overweight</p>
       </div>
     </div>
@@ -92,7 +92,7 @@
     <!-- pure grid group -->
     <div class="pure-g">
       <div class="pure-u-1-1">
-        <h2 style="text-align:center;">Fastfood restaurant locations in the US</h2>
+        <h2 style="text-align:center;">Fast-food Restaurants In The US</h2>
       </div>
     </div>
 
@@ -113,7 +113,7 @@
     <!-- pure grid group -->
    <div class="pure-g">
       <div class="pure-u-1-1">
-        <h2 style="text-align:center;">Average calories of popular fastfood categories</h2>
+        <h2 style="text-align:center;">Calories Per Serving?</h2>
       </div>
     </div>
    
@@ -135,7 +135,7 @@
      <!-- pure grid group -->
       <div class="pure-g">
       <div class="pure-u-1-1">
-        <h2 style="text-align:center;">Obesity rate in the US based on genders</h2>
+        <h2 style="text-align:center;">Obesity Rate In The USA</h2>
       </div>
     </div>
    
@@ -155,7 +155,7 @@
     <!-- pure grid group -->
     <div class="pure-g">
       <div class="pure-u-1-1">
-        <h2 style="text-align:center;">Death leading causes in the US</h2>
+        <h2 style="text-align:center;">Consequences?</h2>
       </div>
     </div>
    
