--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <div class="pure-u-1-4">
           <div class="description description-left">
             <p style="text-align:center;font-style: normal;">Obesity is one of the biggest problems to many countries in the world. The United States of America has been consistently one of top countries that have highest obesity rate over population </p>
-            <br><p style="text-align:center;"><b>650 mil adults are obese (WHO, 2020)</p>
+            <br><p style="text-align:center;"><b>650 million adults are obese (WHO, 2020)</p>
           </div>
         </div>
       <div class="pure-u-3-4">
