--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
         <div class="description description-left">
           
             <p style="text-align:center;font-style: normal;">An average adult should consume around 2000 – 2500 calories per day. However, if the body consumes too many calories without burning excess energy, the body will store the extra calories as fat. Fast foods are the rich sources of calories and fat.</p>
-            <br><p style="text-align:center;"><b>1.100 calories of a BigMac meal</p>
+            <br><p style="text-align:center;"><b>1.100 calories from a BigMac meal</p>
 
         </div>
       </div>
