--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <div class="pure-g">
       <div class="pure-u-1-1">
         <h1 style="text-align:center;">Obesity In The USA</h1>
-        <p style="text-align:center;">This page demonstrates the obesity rate in America, contributing factors to the obesity rate, and consequences of being overweight</p>
+        <p>This page demonstrates the obesity rate in America, contributing factors to the obesity rate, and consequences of being overweight</p>
       </div>
     </div>
   <!-- end pure grid group -->
@@ -79,7 +79,7 @@
     <div class="pure-g">
         <div class="pure-u-1-4">
           <div class="description description-left">
-            <p style="text-align:center;font-style: normal;">Obesity is one of the biggest problems to many countries in the world. The United States of America has been consistently one of top countries that have highest obesity rate over population </p>
+            <p style="font-style: normal;">Obesity is one of the biggest problems to many countries in the world. The United States of America has been consistently one of top countries that have highest obesity rate over population </p>
             <br><p style="text-align:center;"><b>650 million adults are obese (WHO, 2020)</p>
           </div>
         </div>
@@ -102,7 +102,7 @@
         </div>
         <div class="pure-u-1-4">
           <div class="description description-right">
-            <p style="text-align:center;font-style: normal;">The US has over 50.000 fast food chains (Njaramba, 2020). The Center for Disease Control and Prevention considers obesity is a major health issue resulting in numerous diseases in the US.</p>
+            <p style="font-style: normal;">The US has over 50.000 fast food chains (Njaramba, 2020). The Center for Disease Control and Prevention considers obesity is a major health issue resulting in numerous diseases in the US.</p>
             <br><p style="text-align:center;"><b>Over 13.000 MacDonald in US</p>
           </div>
         </div> 
@@ -121,7 +121,7 @@
       <div class="pure-u-1-4">
         <div class="description description-left">
           
-            <p style="text-align:center;font-style: normal;">An average adult should consume around 2000 – 2500 calories per day. However, if the body consumes too many calories without burning excess energy, the body will store the extra calories as fat. Fast foods are the rich sources of calories and fat.</p>
+            <p style="font-style: normal;">An average adult should consume around 2000 – 2500 calories per day. However, if the body consumes too many calories without burning excess energy, the body will store the extra calories as fat. Fast foods are the rich sources of calories and fat.</p>
             <br><p style="text-align:center;"><b>1.100 calories from a BigMac meal</p>
 
         </div>
@@ -145,7 +145,7 @@
         </div>
         <div class="pure-u-1-4">
           <div class="description description-right">
-            <p style="text-align:center;font-style: normal;">According to the Centers for Disease Control and Prevention (2020), the obesity rate in the US has reached highest record in 2017 – 2018. The Centers for Disease Control and Prevention announced that all 50 states in America has over 20% obesity rate (2020)</p>
+            <p style="font-style: normal;">According to the Centers for Disease Control and Prevention (2020), the obesity rate in the US has reached highest record in 2017 – 2018. The Centers for Disease Control and Prevention announced that all 50 states in America has over 20% obesity rate (2020)</p>
             <br><p style="text-align:center;"><b>42.4% obesity rate(2017)</p>
           </div>
         </div>
@@ -163,7 +163,7 @@
       <div class="pure-u-1-4">
         <div class="description description-left">
 
-            <p style="text-align:center;font-style: normal;">Obese people have a higher risk of having Coronary heart disease, type 2 diabetes, stroke. According to the data from the CDC, heart diseases and diabetes have been the leading factors of death in the US consistently. </p>
+            <p style="font-style: normal;">Obese people have a higher risk of having Coronary heart disease, type 2 diabetes, stroke. According to the data from the CDC, heart diseases and diabetes have been the leading factors of death in the US consistently. </p>
             <br><p style="text-align:center;"><b>647.457 deaths by heart diseases in 2017</p>
         </div>
       </div>
