--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <div class="pure-g">
       <div class="pure-u-1-1">
         <h1 style="text-align:center;">Obesity In The USA</h1>
-        <p>This page demonstrates the obesity rate in America, contributing factors to the obesity rate, and consequences of being overweight</p>
+        <p style="text-align:center;">This page demonstrates the obesity rate in America, contributing factors to the obesity rate, and consequences of being overweight</p>
       </div>
     </div>
   <!-- end pure grid group -->
