--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
         <div class="description description-left">
           
             <p style="font-style: normal;">An average adult should consume around 2000 – 2500 calories per day (NHS, 2019). However, if the body consumes too many calories without burning excess energy, the body will store the extra calories as fat. Fast foods are the rich sources of calories and fat.</p>
-            <br><p style="text-align:center;"><b>1.100 calories from a BigMac meal</p>
+            <br><p style="text-align:center;"><b>1.100 calories from a BigMac meal (Walsh, 2020)</p>
 
         </div>
       </div>
@@ -166,7 +166,7 @@
         <div class="description description-left">
 
             <p style="font-style: normal;">Obese people have a higher risk of having Coronary heart disease, type 2 diabetes, stroke. According to the data from the CDC, heart diseases and diabetes have been the leading factors of death in the US consistently. </p>
-            <br><p style="text-align:center;"><b>647.457 deaths by heart diseases in 2017</p>
+            <br><p style="text-align:center;"><b>647.457 deaths by heart diseases in 2017 (CDC, 2020)</p>
         </div>
       </div>
       <div class="pure-u-3-4">
