--- a/index.html
+++ b/index.html
@@ -147,8 +147,8 @@
         </div>
         <div class="pure-u-1-4">
           <div class="description description-right">
-            <p style="font-style: normal;">According to the Centers for Disease Control and Prevention (CDC, 2020), the obesity rate in the US has reached highest record in 2017 – 2018. The Centers for Disease Control and Prevention announced that all 50 states in America has over 20% obesity rate (CDC, 2020)</p>
-            <br><p style="text-align:center;"><b>42.4% obesity rate(CDC, 2017)</p>
+            <p style="font-style: normal;">According to the Centers for Disease Control and Prevention (Fryar, Carroll, and Ogden, 2018), the obesity rate in the US has reached highest record in 2017 – 2018. The Centers for Disease Control and Prevention announced that all 50 states in America has over 20% obesity rate (CDC, 2020)</p>
+            <br><p style="text-align:center;"><b>42.4% obesity rate(Fryar, Carroll, and Ogden, 2018)</p>
           </div>
         </div>
       
@@ -166,7 +166,7 @@
         <div class="description description-left">
 
             <p style="font-style: normal;">Obese people have a higher risk of having Coronary heart disease, type 2 diabetes, stroke. According to the data from the CDC, heart diseases and diabetes have been the leading factors of death in the US consistently. </p>
-            <br><p style="text-align:center;"><b>647.457 deaths by heart diseases in 2017 (CDC, 2020)</p>
+            <br><p style="text-align:center;"><b>647.457 deaths by heart diseases in 2017 (Heron, 2019)</p>
         </div>
       </div>
       <div class="pure-u-3-4">
